--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "vue": "^3.3.4"
